--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,11 +2,10 @@
     <!-- Base application theme. -->
     <style name="Theme.ReadMine" parent="Theme.AppCompat.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorAccent">@color/teal_200</item>
+        <!--        <item name="android:windowBackground">@drawable/splash</item>-->
         <!-- Customize your theme here. -->
-
     </style>
-
 </resources>
